# xsshend

./: .gitignore  BUGFIX-0.3.2.md  CHANGELOG.md  Cargo.toml  FEATURE-CLI-HELP-0.3.3.md  LAB-GUIDE.md  LAB-TESTING-GUIDE.md  LICENSE  PHASE4-COMPLETE.md  PHASE4-FEATURES.md  PHASE4-SUMMARY.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.2.md  RUSTSEC-2023-0071-EXPLANATION.md  SECURITY.md  audit.toml  configuration.md  deny.toml  index.html  release-plz.toml  test-file.txt  usage.md
.github/instructions/: roadmap.instructions.md
.github/workflows/: README.md  agent-ci-fix.lock.yml  agent-ci-fix.md  agent-issue-triage.lock.yml  agent-issue-triage.md  agent-pr-review.lock.yml  agent-pr-review.md  ci.yml  deploy-docs.yml  development.yml  pre-commit.yml  release.yml  security.yml  test.yml
benches/: performance_bench.rs
docs/: INSTALLATION.md  LAB-DOCUMENTATION-SUMMARY.md  LAB-INDEX.md  LAB-README.md  LAB-TEST-RESULTS-TEMPLATE.md  LAB-TROUBLESHOOTING.md  README.md  _config.yml  architecture.md  auto-configuration.md  cicd-implementation-summary.md  cicd-workflow.md  cicd.md  configuration.md  github-secrets-setup.md  index.html  optimization.md  ssh-implementation.md  ssh-key-fix-summary.md  ssh-key-management.md  ssh-key-selection.md  ssh-keys.md  theme-management.md  usage.md
docs/_layouts/: default.html
examples/: hosts.json
scripts/: cleanup_optimization.md  lab-common.sh  lab-diagnostic.sh  lab-setup.sh  prepare-release.sh  test-lab.sh  test-ssh-keys.sh  test_passphrase.sh
src/: lib.rs  main.rs
src/config/: hosts.rs  mod.rs
src/core/: executor.rs  grep.rs  mod.rs  parallel.rs  uploader.rs  validator.rs
src/interactive/: formatters.rs  mod.rs  prompts.rs
src/ssh/: agent.rs  auth.rs  client.rs  keys.rs  mod.rs  pool.rs  transfer.rs
src/ui/: app_state.rs  events.rs  hierarchical_selector.rs  mod.rs  multi_screen_handler.rs  multi_screen_tui.rs  prompts.rs  screens.rs  theme.rs  theme.rs.old  tui.rs  tui_new.rs
src/ui/components/: controls.rs  header.rs  layout.rs  logs.rs  mod.rs  progress.rs  status.rs
src/utils/: errors.rs  logger.rs  mod.rs  path_expansion.rs  tui_logger.rs
test/: README.md  SOLUTION-PATH.md  check-multipass.sh  demo.sh  generate-test-files.sh  run-integration-tests.sh  test-vms.sh
test/multipass/: cloud-init.yaml
tests/: cli_test.rs  config_test.rs  integration_test.rs  path_expansion_test.rs  ssh_keys_test.rs  uploader_test.rs  validator_test.rs
tests/common/: mod.rs
