[package]
name = "xsshend"
version = "0.3.0"
edition = "2024"
description = "Simple CLI tool for uploading files to multiple SSH servers"
license = "MIT"
authors = ["William Derue <willisback@example.com>"]
repository = "https://github.com/WillIsback/xsshend"
homepage = "https://willisback.github.io/xsshend"
keywords = ["ssh", "upload", "cli", "file-transfer"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# SSH & Transferts
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
ssh2-config = "0.2"

# Interface utilisateur simple
indicatif = "0.17"

# CLI & Configuration
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Filesystem
dirs = "5.0"

# Utilitaires
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "performance_bench"
harness = false
