[package]
name = "xsshend"
version = "0.4.8"
edition = "2021"
description = "Simple CLI tool for uploading files to multiple SSH servers"
license = "MIT"
authors = ["William Derue <willisback@example.com>"]
repository = "https://github.com/WillIsback/xsshend"
homepage = "https://willisback.github.io/xsshend"
keywords = ["ssh", "upload", "cli", "file-transfer"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# SSH & Transferts (Pure Rust - No OpenSSL!)
russh = "0.54.6"
russh-sftp = "2.1.1"

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Interface utilisateur simple
indicatif = "0.17"
dialoguer = "0.12"
console = "0.16.1"
atty = "0.2"

# CLI & Configuration
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Filesystem
dirs = "5.0"

# Utilitaires
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "performance_bench"
harness = false
